@@ -24,7 +24,7 @@
         -->
 
         <configuration>
-          <argLine>-Xmx1G -XX:MaxPermSize=256M</argLine>
+          <argLine>-Xmx1G -XX:MaxPermSize=256M -XX:-OmitStackTraceInFastThrow</argLine>
           <forkedProcessTimeoutInSeconds>7200</forkedProcessTimeoutInSeconds>
           <showEclipseLog>true</showEclipseLog>
           <testFailureIgnore>true</testFailureIgnore>
@@ -38,8 +38,12 @@
           <!-- Items required only by the testing runtime: -->
           <dependencies>
             <dependency>
-              <artifactId>org.eclipse.rcp</artifactId>
               <type>eclipse-feature</type>
+              <artifactId>org.eclipse.rcp</artifactId>
+            </dependency>
+            <dependency>
+              <type>eclipse-plugin</type>
+              <artifactId>org.eclipse.jdt.compiler.apt</artifactId>
             </dependency>
           </dependencies>
 
@@ -47,36 +51,4 @@
       </plugin>
     </plugins>
   </build>
-
-  <!-- For reference, this is what was in the PDE build before:
-  <target name="-runTestSuite">
-    <ant target="core-test" antfile="${test.library.xml}" dir="${test.eclipse.host}" inheritall="false">
-      <property name="data-dir" value="${test.workspace} -clean" />
-      <property name="plugin-name" value="org.codehaus.groovy.alltests" />
-      <property name="classname" value="org.codehaus.groovy.alltests.GroovyJDTTests" />
-      <property name="test-output" value="${test.eclipse.host}/org.codehaus.groovy.alltests.GroovyJDTTests.xml" />
-      <property name="eclipse-home" value="${test.eclipse.host}" />
-      <property name="junit-stylesheet" value="${test.eclipse.base}/eclipse/plugins/org.eclipse.test_3.3.100/JUNIT.XSL" />
-      <property name="org.eclipse.test" value="3.3.100"/>
-      <property name="arch" value="${test_arch}"/>
-      <property name="os" value="${test_os}"/>
-      <property name="ws" value="${test_ws}"/>
-      <property name="vmargs" value="-Xmx1024M -XX:PermSize=64M -XX:MaxPermSize=256M -Dgroovy.compiler.level=${compiler.level}"/>
-    </ant>
-    <ant target="ui-test" antfile="${test.library.xml}" dir="${test.eclipse.host}" inheritall="false">
-      <property name="data-dir" value="${test.workspace} -clean" />
-      <property name="plugin-name" value="org.codehaus.groovy.alltests" />
-      <property name="classname" value="org.codehaus.groovy.alltests.AllGroovyTests" />
-      <property name="test-output" value="${test.eclipse.host}/org.codehaus.groovy.alltests.AllGroovyTests.xml" />
-      <property name="eclipse-home" value="${test.eclipse.host}" />
-      <property name="junit-stylesheet" value="${test.eclipse.base}/eclipse/plugins/org.eclipse.test_3.3.100/JUNIT.XSL" />
-      <property name="org.eclipse.test" value="3.3.100"/>
-      <property name="arch" value="${test_arch}"/>
-      <property name="os" value="${test_os}"/>
-      <property name="ws" value="${test_ws}"/>
-      <property name="vmargs" value="-Xmx1024M -XX:PermSize=64M -XX:MaxPermSize=256M -Dgroovy.compiler.level=${compiler.level}"/>
-    </ant>
-  </target>
-  -->
-
 </project>
